# FourInARowCPP

./: .gitignore  CMakeLists.txt  README.md  pch.h  run.bash  setup.bash
LibFourInARowCPP/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameEnums.h  GuiApp.cpp  GuiApp.h  MinMax.cpp  MinMax.h  Player.h  Timer.cpp  Timer.h  TreeNode.cpp  TreeNode.h  pch.h
src/: Board.cpp  Board.h  Game.cpp  Game.h  Gui.cpp  Gui.h  GuiApp.cpp  GuiApp.h  MinMax.cpp  MinMax.h  Timer.cpp  Timer.h  main.cpp
tests/: CMakeLists.txt  test.cpp
